--- a/packages/rotastellar-compute/pyproject.toml
+++ b/packages/rotastellar-compute/pyproject.toml
@@ -4,20 +4,42 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rotastellar-compute"
-version = "0.0.1"
+version = "0.1.0"
 description = "Orbital compute planning and simulation tools"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.9"
-authors = [{name = "Rota, Inc.", email = "hello@rotastellar.com"}]
+authors = [
+    {name = "Subhadip Mitra", email = "subhadipmitra@rotastellar.com"},
+    {name = "RotaStellar Research", email = "research@rotastellar.com"},
+]
+maintainers = [
+    {name = "Subhadip Mitra", email = "subhadipmitra@rotastellar.com"},
+    {name = "RotaStellar Research", email = "research@rotastellar.com"},
+]
 keywords = ["space", "orbital", "data-center", "thermal-simulation", "space-computing"]
 classifiers = [
-    "Development Status :: 1 - Planning",
+    "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Astronomy",
+    "Topic :: Scientific/Engineering :: Physics",
+]
+dependencies = [
+    "rotastellar>=0.1.0",
+]
+
+[project.optional-dependencies]
+numpy = ["numpy>=1.24"]
+dev = [
+    "pytest>=7.0",
+    "pytest-cov>=4.0",
 ]
 
 [project.urls]
