--- a/packages/rotastellar-intel/pyproject.toml
+++ b/packages/rotastellar-intel/pyproject.toml
@@ -4,20 +4,49 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rotastellar-intel"
-version = "0.0.1"
+version = "0.1.0"
 description = "Orbital intelligence and space situational awareness tools"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.9"
-authors = [{name = "Rota, Inc.", email = "hello@rotastellar.com"}]
-keywords = ["space", "satellite-tracking", "conjunction-analysis", "orbital-intelligence", "tle"]
+authors = [
+    {name = "Subhadip Mitra", email = "subhadipmitra@rotastellar.com"},
+    {name = "RotaStellar Research", email = "research@rotastellar.com"},
+]
+maintainers = [
+    {name = "Subhadip Mitra", email = "subhadipmitra@rotastellar.com"},
+    {name = "RotaStellar Research", email = "research@rotastellar.com"},
+]
+keywords = [
+    "space", "satellite-tracking", "conjunction-analysis",
+    "orbital-intelligence", "tle", "sgp4", "space-situational-awareness"
+]
 classifiers = [
-    "Development Status :: 1 - Planning",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Astronomy",
+    "Topic :: Scientific/Engineering :: GIS",
+    "Typing :: Typed",
+]
+
+dependencies = [
+    "rotastellar>=0.1.0",
+]
+
+[project.optional-dependencies]
+sgp4 = ["sgp4>=2.22"]
+dev = [
+    "pytest>=7.0",
+    "pytest-asyncio>=0.21",
+    "mypy>=1.0",
 ]
 
 [project.urls]
@@ -25,5 +54,15 @@ Homepage = "https://rotastellar.com/products/orbital-intelligence"
 Documentation = "https://rotastellar.com/docs/intel"
 Repository = "https://github.com/rotastellar/rotastellar-python"
 
+[tool.hatch.build.targets.sdist]
+include = ["/src"]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/rotastellar_intel"]
+
+[tool.mypy]
+python_version = "3.9"
+strict = true
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
