--- a/packages/rotastellar/pyproject.toml
+++ b/packages/rotastellar/pyproject.toml
@@ -4,23 +4,25 @@ build-backend = "hatchling.build"
 
 [project]
 name = "rotastellar"
-version = "0.0.1"
+version = "0.1.0"
 description = "Python SDK for RotaStellar - Space Computing Infrastructure"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.9"
 authors = [
-    {name = "Rota, Inc.", email = "hello@rotastellar.com"}
+    {name = "Subhadip Mitra", email = "subhadipmitra@rotastellar.com"},
+    {name = "RotaStellar Research", email = "research@rotastellar.com"},
 ]
 maintainers = [
-    {name = "RotaStellar Team", email = "hello@rotastellar.com"}
+    {name = "Subhadip Mitra", email = "subhadipmitra@rotastellar.com"},
+    {name = "RotaStellar Research", email = "research@rotastellar.com"},
 ]
 keywords = [
     "space", "orbital", "satellite", "data-center", "space-computing",
     "orbital-intelligence", "satellite-tracking", "conjunction-analysis"
 ]
 classifiers = [
-    "Development Status :: 1 - Planning",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
@@ -31,16 +33,55 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Astronomy",
+    "Topic :: Scientific/Engineering :: GIS",
+    "Typing :: Typed",
 ]
+
+# No external dependencies for core SDK - uses stdlib only
+dependencies = []
+
+[project.optional-dependencies]
+# For async HTTP client (optional enhancement)
+async = ["httpx>=0.25"]
+# For data validation (optional enhancement)
+pydantic = ["pydantic>=2.0"]
+# Development dependencies
+dev = [
+    "pytest>=7.0",
+    "pytest-asyncio>=0.21",
+    "mypy>=1.0",
+    "ruff>=0.1",
+]
+# All optional dependencies
+all = ["rotastellar[async,pydantic]"]
 
 [project.urls]
 Homepage = "https://rotastellar.com"
 Documentation = "https://rotastellar.com/docs"
 Repository = "https://github.com/rotastellar/rotastellar-python"
 Issues = "https://github.com/rotastellar/rotastellar-python/issues"
+Changelog = "https://github.com/rotastellar/rotastellar-python/blob/main/CHANGELOG.md"
 
 [tool.hatch.build.targets.sdist]
 include = ["/src"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/rotastellar"]
+
+[tool.mypy]
+python_version = "3.9"
+strict = true
+warn_return_any = true
+warn_unused_configs = true
+
+[tool.ruff]
+line-length = 88
+target-version = "py39"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM"]
+ignore = ["D100", "D104"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_mode = "auto"
